# avr-counter

./: .gitignore  Cargo.toml  readme.md
examples/avr/: Cargo.toml  avr_hw_simulate.pdsprj  mk.toml  readme.md
examples/avr/.cargo/: config.toml
examples/avr/src/: main.rs
src/: counter.rs  lib.rs
