[package]
name = "avr-counter"
version = "0.1.0"
edition = "2021"
keywords = ["avr", "counter"]

[dependencies]
cfg-if = "1.0.0"
nb = "1"
fugit = "0.3.5"
embedded-hal = { version = "=0.2.7", features = ["unproven"] }
void ={version = "*",default-features = false}

avr-device = { version = "0.3", features = ["device-selected"]}

[features]
device-selected = []
atmega-device-selected = []

atmega48p = ["avr-device/atmega48p",    "device-selected", "atmega-device-selected"]
atmega168 = ["avr-device/atmega168",    "device-selected", "atmega-device-selected"]
atmega328p = ["avr-device/atmega328p",  "device-selected", "atmega-device-selected"]
atmega328pb = ["avr-device/atmega328pb","device-selected", "atmega-device-selected"]
atmega32u4 = ["avr-device/atmega32u4",  "device-selected", "atmega-device-selected"]
atmega2560 = ["avr-device/atmega2560",  "device-selected", "atmega-device-selected"]
atmega1280 = ["avr-device/atmega1280",  "device-selected", "atmega-device-selected"]
atmega1284p = ["avr-device/atmega1284p","device-selected", "atmega-device-selected"]

#attiny84 = ["avr-device/attiny84", "device-selected"]
#attiny85 = ["avr-device/attiny85", "device-selected"]
#attiny88 = ["avr-device/attiny88", "device-selected"]
#attiny167 = ["avr-device/attiny167", "device-selected"]
#attiny2313 = ["avr-device/attiny2313", "device-selected"]

#default = ["atmega328p"]

[dev-dependencies]
ufmt = "0.1.0"
avr-device = { version = "0.3", features = ["atmega328p"]}

