[package]
authors = ["flyingyizi <flyingyizi@gmail.com>"]
edition = "2018"
name = "counter-demo"
version = "0.1.0"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "1"
fugit = "0.3.5"

arduino-hal = {git="https://github.com/rahix/avr-hal",rev="1aacefb335517f85d0de858231e11055d9768cdf", features = ["arduino-uno"] }

avr-allocator ={git="https://github.com/flyingyizi/avr-allocator"}

avr-counter ={ path= "../../../avr-counter", features = ["atmega328p"]}


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
codegen-units = 1
#debug = true
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
#debug = true
lto = true
opt-level = "s"
